fixed spacing

--- a/aboutUs.css
+++ b/aboutUs.css
@@ -6,7 +6,6 @@ body {
     line-height: 1.6;
 }
 
-
 .navbar {
     width: 100%;
     padding: 15px 50px;
@@ -18,19 +17,16 @@ body {
     position: fixed;
     top: 0;
     left: 0;
+    list-style: none;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
 }
 
-
 .navbar h2 {
     text-decoration: none;
-
     color: white;
     font-size: 40px;
-
     list-style: none;
-
 }
 
 
