--- a/travel.css
+++ b/travel.css
@@ -1,81 +1,57 @@
 body {
     margin: 0;
-
     font-family: Arial, sans-serif;
-
+    background-color: #f5f5f5;
+    color: #333;
+    line-height: 1.6;
 }
 
 
 .navbar {
     width: 100%;
-
     padding: 15px 50px;
-
     padding-bottom: 10px;
     background-color: #1e4b9e;
-
     display: flex;
-
     align-items: center;
-
     justify-content: space-evenly;
-
     position: fixed;
-
     top: 0;
     left: 0;
     list-style: none;
-
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-
     z-index: 1000;
-
 }
-
 
 .navbar h2 {
     text-decoration: none;
-
     color: white;
     font-size: 40px;
-
     list-style: none;
-
 }
-
 
 .logoImg img {
     width: 100px;
-
     border-radius: 500px;
-
     float: left;
 
 }
 
-
 .nav-links {
     list-style: none;
-
     margin: 0;
-
     padding: 0;
-
     display: flex;
 }
 
 .nav-links li {
     margin-left: 20px;
-
 }
 
 .nav-links a {
     color: rgb(255, 255, 255);
-
     font-size: 20px;
-
     text-decoration: none;
-
     transition: color 0.3s;
 }
 
@@ -83,137 +59,89 @@ body {
     color: #ffd700;
 }
 
-
 .hero {
     width: 100%;
-
     height: 900px;
-
     background-image: url('mt.fuji.jpeg');
-
     background-size: cover;
-
     background-position: center;
-
     background-repeat: no-repeat;
-
     display: flex;
-
     justify-content: center;
-
     align-items: center;
-
 }
 
 .text-box {
     text-align: center;
-
     color: white;
-
     background: rgba(0, 0, 0, 0.3);
-
     padding: 20px 30px;
-
     border-radius: 8px;
-
 }
 
 .text-box h1 {
     font-size: 50px;
-
     margin-bottom: 10px;
-
 }
 
 .text-box p {
     font-size: 22px;
-
     margin-bottom: 20px;
-
 }
 
 .btn {
     padding: 12px 25px;
-
     background-color: #1e4b9e;
-
     color: white;
-
     border: none;
-
     font-size: 18px;
-
     border-radius: 6px;
-
     cursor: pointer;
-
 }
 
 .btn:hover {
     background-color: #163876;
-
 }
 
 
 .destinations {
     padding: 50px;
-
     text-align: center;
-
 }
 
 .destinations h2 {
     font-size: 32px;
-
     margin-bottom: 30px;
-
 }
 
 .cards {
     display: flex;
-
     justify-content: center;
-
     gap: 20px;
-
     margin-top: 30px;
-
 }
 
 .card {
     width: 250px;
-
     background: white;
-
     border-radius: 10px;
-
     padding: 15px;
-
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-
 }
 
 .card img {
     width: 100%;
-
     height: 150px;
-
     object-fit: cover;
-
     border-radius: 8px;
-
 }
 
 .card h3 {
     margin-top: 10px;
-
     font-size: 20px;
-
 }
 
 .card p {
     font-size: 14px;
-
     color: #555;
-
 }
